--- a/package.json
+++ b/package.json
@@ -45,5 +45,5 @@
   "devDependencies": {
     "tailwindcss": "^3.4.1"
   },
-  "homepage": "https://cazac11722.github.io/SnsMark/"
+  "homepage": "https://excelcion.github.io/SnsForYou/"
 }
